Changed Site to be specific to me

--- a/_includes/history.html
+++ b/_includes/history.html
@@ -1,1 +1,60 @@
-<div class="history"><div class="cd-timeline-header"><h2 id="Experenice">Experience</h2><hr class="bar"/></div><section id="cd-timeline" class="cd-container"><div class="cd-timeline-block"><div class="cd-timeline-img cd-picture"><img src="../assets/img/college.svg" alt="Picture"/></div><!-- cd-timeline-img--><div class="cd-timeline-content"><h2 class="story-heading">NUI Computer Science</h2><P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget libero vel turpis eleifend convallis vel vitae est. Suspendisse mattis ut nulla dapibus ultricies. Suspendisse feugiat felis mi, sit amet pharetra massa volutpat sit amet. Morbi gravida, libero sit amet lacinia tristique.</P><span class="cd-date">2010-2014</span></div><!-- cd-timeline-content--><!-- cd-timeline-block--></div><div class="cd-timeline-block"><div class="cd-timeline-img cd-movie"><img src="../assets/img/idea14.svg" alt="College"/></div><!-- cd-timeline-img--><div class="cd-timeline-content"><h2>Enterprise Competition Runner-up</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget libero vel turpis eleifend convallis vel vitae est. Suspendisse mattis ut nulla dapibus ultricies. Suspendisse feugiat felis mi, sit amet pharetra massa volutpat sit amet. Morbi gravida, libero sit amet lacinia tristique.</p><span class="cd-date">April 2014</span></div><!-- cd-timeline-content--><!-- cd-timeline-block--></div><div class="cd-timeline-block"><div class="cd-timeline-img cd-picture"><img src="../assets/img/web-programming.svg" alt="Picture"/></div><!-- cd-timeline-img--><div class="cd-timeline-content"><h2>Software Developer</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget libero vel turpis eleifend convallis vel vitae est. Suspendisse mattis ut nulla dapibus ultricies. Suspendisse feugiat felis mi, sit amet pharetra massa volutpat sit amet. Morbi gravida, libero sit amet lacinia tristique.</p><span class="cd-date">May 2013 - September 2014</span></div><!-- cd-timeline-content--><!-- cd-timeline-block--></div><div class="cd-timeline-block"><div class="cd-timeline-img cd-location"><img src="../assets/img/graduate38.svg" alt="Location"/></div><!-- cd-timeline-img--><div class="cd-timeline-content"><h2>Computer Science School</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget libero vel turpis eleifend convallis vel vitae est. Suspendisse mattis ut nulla dapibus ultricies. Suspendisse feugiat felis mi, sit amet pharetra massa volutpat sit amet. Morbi gravida, libero sit amet lacinia tristique.</p><span class="cd-date">Sept 2014 - Sept 2015</span></div><!-- cd-timeline-content--><!-- cd-timeline-block--></div><div class="cd-timeline-block"><div class="cd-timeline-img cd-location"><img src="../assets/img/hosting.svg" alt="Location"/></div><!-- cd-timeline-img--><div class="cd-timeline-content"><h2>Integration Engineer with Example</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget libero vel turpis eleifend convallis vel vitae est. Suspendisse mattis ut nulla dapibus ultricies. Suspendisse feugiat felis mi, sit amet pharetra massa volutpat sit amet. Morbi gravida, libero sit amet lacinia tristique.</p><span class="cd-date">May 2015 - Current</span></div><!-- cd-timeline-content--><!-- cd-timeline-block--><div class="cd-timeline-block"><div class="cd-timeline-img cd-location"><img src="../assets/img/question30.svg" alt="Location"/></div></div><!-- cd-timeline--></div></section><div class="cd-timeline-header"><h2></h2></div></div>
+<div class="history">
+    <div class="cd-timeline-header">
+        <h2 id="Experenice">Experience</h2>
+        <hr class="bar" />
+    </div>
+    <section id="cd-timeline" class="cd-container">
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-picture"><img src="../assets/img/college.svg" alt="Picture" /></div>
+            <!-- cd-timeline-img-->
+            <div class="cd-timeline-content">
+                <h2 class="story-heading">CSRA Software Engineering Intern</h2>
+                <P> Creat software for the Dahlgren Navy Base using Java, C++, and Unix frequently. Earned interim security clearance, still waiting on the official security clearance.</P></P><span class="cd-date">2016-Now</span></div>
+            <!-- cd-timeline-content-->
+            <!-- cd-timeline-block-->
+        </div>
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-movie"><img src="../assets/img/idea14.svg" alt="College" /></div>
+            <!-- cd-timeline-img-->
+            <div class="cd-timeline-content">
+                <h2>Enterprise Application Sevices Student Aid</h2>
+                <p> Work with Oracle SQL and Microsoft Report Builder to create reports that access the required information for different departments with in the University of Mary Washington.</p><span class="cd-date">2016-Now</span></div>
+            <!-- cd-timeline-content-->
+            <!-- cd-timeline-block-->
+        </div>
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-picture"><img src="../assets/img/web-programming.svg" alt="Picture" /></div>
+            <!-- cd-timeline-img-->
+            <div class="cd-timeline-content">
+                <h2>Volunteer at the Mary Washington Hospital</h2>
+                <p> Aid the hospital staff in the oncology and palliative care center to provide the best customer service for their patients. Shadowed doctors and also spend time volunteering in the Intensive Care Unit.</p><span class="cd-date">2015-Now</span></div>
+            <!-- cd-timeline-content-->
+            <!-- cd-timeline-block-->
+        </div>
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-location"><img src="../assets/img/graduate38.svg" alt="Location" /></div>
+            <!-- cd-timeline-img-->
+            <div class="cd-timeline-content">
+                <h2>Volunteer at the Lloyd Moss Free Clinic</h2>
+                <p>Take vitals of patients for night clinic, ask them what is bothering them, and provide the information for medical screeners and health care providers to better assess the patients' needs.</p><span class="cd-date">2014-Now</span></div>
+            <!-- cd-timeline-content-->
+            <!-- cd-timeline-block-->
+        </div>
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-location"><img src="../assets/img/hosting.svg" alt="Location" /></div>
+            <!-- cd-timeline-img-->
+            <div class="cd-timeline-content">
+                <h2>University of Mary Washington</h2>
+                <p>Studying Computer Science, Biology, and am doing Pre-Medicine. Involved in several groups: Head of Constitutional Cabinet in the UMW Senate, Member of Chi Beta Phi Honor Society, Member of COAR, Pre-medicine club, UNICEF club, Treasurer of the Association of Computing Machinery, member of Arab Culture Club, and the Campus Programming Board. </p><span class="cd-date">May 2015 - Current</span></div>
+            <!-- cd-timeline-content-->
+            <!-- cd-timeline-block-->
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-location"><img src="../assets/img/question30.svg" alt="Location" /></div>
+            </div>
+            <!-- cd-timeline-->
+        </div>
+    </section>
+    <div class="cd-timeline-header">
+        <h2></h2>
+    </div>
+</div>
