--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,5 +4,5 @@
     <nav><a href="#about-me">About Me</a><a href="#Experenice">Experience</a><a href="#Blog">Blog</a><a href="#Details">Contact Me</a></nav>
     <h1><span>Charbel Marche</span></span>
     </h1>
-    <p class="kicker">Software Engineer // Developer // Designer</p>
+    <p class="kicker">Software Engineer Intern // Computer Science Major // Biology Minor // Pre-Medicine Student</p>
 </header>
