Changed some colors on the header

--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -71,17 +71,17 @@ header
       +MQ(M)
         display: inline-block
       margin-left: 20px
-      color: rgba(0, 0, 0,0.5)
+      color: rgba(0, 0, 0,0.05)
       @extend %small-bold
 
 
       &:hover
-        color: rgba(0,0,0,1)
+        color: rgb(50,100,200)
 
   h1
     text-align: center
 
-    color: rgba(0, 0, 0,0.5)
+    color: rgba(0, 0, 0,0.05)
     text-transform: uppercase
     letter-spacing: 0.05cm
     margin-bottom: 20px
@@ -111,7 +111,7 @@ header
         padding: 0.1em 0.2em
       +MQ(L)
         padding: 0.2em 0.5em
-      border: rgba(0, 0, 0,0.5) solid 10px
+      border: rgba(0, 0, 0,0.05) solid 10px
 
 
 
@@ -119,4 +119,4 @@ header
     text-align: center
     @extend %small-bold
     line-height: 1
-    color: rgba(0,0,0,0.5)
+    color: rgba(0,0,0,0.05)
