--- a/assets/css/3-sections/_headersmall.sass
+++ b/assets/css/3-sections/_headersmall.sass
@@ -12,24 +12,24 @@
     a
       display: inline-block
       margin-left: 10px
-      color: rgba(0, 0, 0,0.5)
+      color: rgba(0, 0, 0,0.05)
       @extend %small-bold
 
       &:hover
-        color: rgba(0,0,0,1)
+        color: rgb(50,100,200)
 
   #h1_small
     display: inline-block
     font:
       size: 72px
       weight: 700
-    color: rgba(0, 0, 0,0.5)
+    color: rgba(0, 0, 0,0.05)
     text-transform: uppercase
     letter-spacing: 0.05cm
     span
       display: inline-block
       padding: 0.2em 0.5em
-      border: rgba(0, 0, 0,0.5) solid 10px
+      border: rgba(0, 0, 0,0.05) solid 10px
 
 
 
@@ -37,4 +37,4 @@
     text-align: center
     @extend %small-bold
     line-height: 1
-    color: rgba(0,0,0,0.5)
+    color: rgba(0,0,0,0.05)
