--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -653,7 +653,7 @@ header {
     margin: 30px 30px 30px; }
     header nav a {
       margin-left: 20px;
-      color: rgba(0, 0, 0, 0.5); }
+      color: rgb(0, 0, 0); }
       @media only screen and (min-width: 220px) {
         header nav a {
           display: none; } }
@@ -664,7 +664,7 @@ header {
         color: black; }
   header h1 {
     text-align: center;
-    color: rgba(0, 0, 0, 0.05);
+    color: rgb(0, 0, 0);
     text-transform: uppercase;
     letter-spacing: 0.05cm;
     margin-bottom: 20px;
@@ -687,7 +687,7 @@ header {
     header h1 span {
       display: inline-block;
       padding: 0.2em 0.5em;
-      border: rgba(0, 0, 0, 0.5) solid 10px; }
+      border: rgb(0, 0, 0) solid 10px; }
       @media only screen and (min-width: 220px) {
         header h1 span {
           padding: 0.2em 0.5em; } }
@@ -700,7 +700,7 @@ header {
   header .kicker {
     text-align: center;
     line-height: 1;
-    color: rgba(0, 0, 0, 0.5); }
+    color: rgb(0, 0, 0); }
 
 footer {
   background: url(../img/galway3.jpg) center center;
@@ -715,9 +715,9 @@ footer {
       margin: 0;
       text-transform: uppercase;
       font-size: 12px;
-      color: rgba(0, 0, 0, 0.05); }
+      color: rgb(0, 0, 0); }
     footer .lockup a {
-      color: rgba(0, 0, 0, 0.06);
+      color: rgb(0, 0, 0);
       display: inline-block;
       margin-right: 30px; }
       footer .lockup a:hover {
