--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -738,12 +738,13 @@ footer {
       display: flex;
       margin: auto;
       border-radius: 60%;
-      background: url(../img/face.JPG) no-repeat; }
+      background: url(../img/face.JPG) no-repeat; 
+      background-size: cover;
+    }
     .about-lock .face1-img {
-      height: 180px;
-      width: 180px;
+      background-size: contain;
       border-radius: 50%;
-      background: url(../img/android.JPG);
+      background: url(../img/android.gif);
       margin: auto; }
     .about-lock .flip-container {
       -webkit-perspective: 1000;
