Added the picture on the back of me

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -744,7 +744,7 @@ footer {
     .about-lock .face1-img {
       background-size: contain;
       border-radius: 50%;
-      background: url(../img/android.JPG);
+      background: url(../img/candroid.JPG);
       margin: auto; }
     .about-lock .flip-container {
       -webkit-perspective: 1000;
