--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="container1" class="arrow"></div>
 <div id="container" class="logo"></div>
 <header id="home">
-    <nav><a href="#about-me">About Me</a><a href="#Experenice">Experience</a><a href="#eportfolio">Eportfolio</a><a href="#Blog">Blog</a><a href="#Details">Contact Me</a></nav>
+    <nav><a href="#about-me">About Me</a><a href="#Experenice">Experience</a><a href="#Blog">Eportfolio</a><a href="#Details">Contact Me</a></nav>
     <h1><span>Charbel Marche</span></span>
     </h1>
     <p class="kicker"><b>Software Engineer Intern // Computer Science Major // Biology Minor // Pre-Medicine Student</b></p>
