--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,8 +18,7 @@
         <div class="glyph-icon flaticon-computers13"></div>
     </div>
     <div class="blurb">
-        <p> My name is Charbel Marche, I am a junior at the University of Mary Washington, a Computer Science major, Biology minor, and am Pre-Medicine. I currently work a multitude of jobs, during the school year I work at Enterprise Application Services for the University of Mary Washington as a student aid and as a front desk aid at the Information and Techonolgy Convergence Center. During the breaks I intern as a Software Engineer at CSRA in Dahlgren, Viriginia. Year round I volunteer at the Moss Free Clinic as a medical screener and at the Mary Washington Hospital. I am also currently developing my own alarm clock app (I am targeting heavy-sleepers like myself). </p>
-        <p> I grew up in the rural town of King George, Viriginia as a first-generation Lebanese-American. Growing up in King George I played video games a lot (more than any sane person should) and as I got older, I fell in love with the game of basketball. I also played piano and practiced Isshinryu Karate--which I later ended up teaching at the YMCA. I grew up speaking two languages--Lebanese Arabic and English--with just a smidge of French. I am now a very avid basketball fan, I love to play and am constantly rooting for the Washington Wizards (even thought they rarely give me enough to root for but that is a rant for another website). I also love to lift weights and stays in shape, am passionate about music, and love various outdoor activities like fishing and hunting. </p>
+        <p> My name is Charbel Marche, I am a Senior at the University of Mary Washington, a Computer Science major and Pre-Medicine student. </p>
     </div>
     <div class="skill-lock"></div>
 </section>
